# llm-info-collector

./: .env.example  .gitignore  .python-version  README.md  pyproject.toml
src/model_collector/: __init__.py  main.py
src/model_collector/core/: __init__.py  base.py  models.py  registry.py
src/model_collector/utils/: __init__.py  display.py
tests/: test_civitai.py  test_huggingface.py  test_ollama.py
