[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-collector"
version = "0.1.0"
description = "LLM 모델 메타데이터 수집 CLI 도구"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
model-collector = "model_collector.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/model_collector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
